--- a/Pizza.kv
+++ b/Pizza.kv
@@ -1,16 +1,27 @@
+#:import utils kivy.utils
+#:set color1 '#DD7835'
+#:set color2 '#C8C8C8'
+
+
 MainWidget:
+
+<CoverImage@CoverBehavior+Image>:
+    reference_size: self.texture_size
 
 <MainWidget>:
     recycleView: recycleView
+    CoverImage:
+        source: "images/menu_background.jpg"
     RecycleView:
         id: recycleView
         viewclass: 'PizzaWidget'
         RecycleBoxLayout:
-            default_size: None, dp(100)
+            default_size: None, dp(56)
             default_size_hint: 1, None
             size_hint_y: None
             height: self.minimum_height
             orientation: 'vertical'
+            spacing: dp(16)
 
 <PizzaWidget>:
     spacing: "10dp"
@@ -19,12 +30,45 @@ MainWidget:
         orientation: 'vertical'
         BoxLayout:
             spacing: "10dp"
-            Label:
+            FitLabel:
                 text: root.nom
-            Label:
+                bold: True
+                font_size: dp(22)
+            Badge:
                 text: "Végétarienne" if root.vegetarienne else ""
-        Label:
+        LeftAlignLabel:
             text: root.ingredients
-    Label:
-        text: str(root.prix)
+            color: utils.get_color_from_hex(color2)
+    FitLabel:
+        text: str(root.prix)+"€"       
+        font_size: dp(20)
+        color: utils.get_color_from_hex(color1)
+<Badge@FitLabel>:
+    color: 0, 0, 0, 1
+    bold: True
+    font_size: dp(10)
+    padding: dp(8), dp(3)
+    canvas.before:
+        Rectangle:
+            source: "images/badge.png"
+            pos: self.pos
+            size: self.size
+
+
+<FitLabel@Label>:
+    size_hint: None, None
+    size: self.texture_size
+
+
+<LeftAlignLabel@Label>:
+    halign: "left"
+    text_size: self.size
+    valign: "center"
+    canvas.before:
+        Color:
+            #rgb: utils.get_random_color()
+            rgba: 0, 0, 0, 0
+        Rectangle:
+            pos: self.pos
+            size: self.size
     
