--- a/pizzascr.kv
+++ b/pizzascr.kv
@@ -49,6 +49,18 @@ MainWidget:
                     height: self.minimum_height
                     orientation: 'vertical'
                     spacing: dp(16)
+        Label:
+            size_hint: 1, None
+            height: dp(30) if len(root.error_str) > 0 else dp(0)
+            canvas.before:
+                Color:
+                    rgb: 1, 0, 0
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+            text: root.error_str
+            font_size: dp(12)
+            bold: True
         
             
                 
@@ -117,4 +129,8 @@ MainWidget:
         Rectangle:
             pos: self.pos
             size: self.size
+
+<BandeauErreur@Label>:
+    
+            
     
